# AreaPolygonization-Project

./: MusicGenreClass.ipynb  README copy.md  README.md  polygon.py  readme.txt  report.txt
example/changepol/: changepol.cpp  changepol.h  main.cpp
example/globalchange/: globalchange.cpp  globalchange.h
example/globaltranstep/: globaltranstep.cpp  globaltranstep.h  main.cpp
example/instancesex/: london-0000050.instance  uniform-0000030-2.instance  uniform-0002000-2.instance
example/localchange/: localchange.cpp  localchange.h  main.cpp
example/localtranstep/: changepol.cpp  localtranstep.cpp  localtranstep.h  main.cpp
example/loops/: changepol.h  globalchange.cpp  localchange.cpp  localchange.h  loops.cpp  main.cpp  pathlist.cpp
example/merge/: main.cpp
example/pathlist/: main.cpp  pathlist.cpp  pathlist.h
example/subdivision/: CMakeCache.txt  CMakeLists.txt  Makefile  algorithms.cpp  algorithms.h  close.h  cmake_install.cmake  edgeselection.cpp  edgeselection.h  ex  intersect.cpp  main.cpp  sort.cpp  sort.h  subdivision.cpp  subdivision.h  triangle.cpp  triangle.h
instances/data/images/: euro-night-0000015.instance  euro-night-0000025.instance  euro-night-0000030.instance  euro-night-0000035.instance  euro-night-0000040.instance  euro-night-0000045.instance  euro-night-0000060.instance  euro-night-0000070.instance  euro-night-0000080.instance  euro-night-0000090.instance  euro-night-0000400.instance  euro-night-0000600.instance  euro-night-0000700.instance  euro-night-0000800.instance  euro-night-0000900.instance  euro-night-0003000.instance  euro-night-0004000.instance  euro-night-0006000.instance  euro-night-0007000.instance  euro-night-0008000.instance  euro-night-0009000.instance  euro-night-0030000.instance  (+115 more)
src/: CMakeCache.txt  CMakeLists.txt  Makefile  algorithms.cpp  algorithms.h  changepol.cpp  close.cpp  cmake_install.cmake  evalalgorithms.cpp  evalalgorithms.h  evaluation.cpp  globalchange.cpp  globalchange.h  globaltranstep.cpp  globaltranstep.h  inputs.cpp  insertpoint.cpp  insertpoint.h  intersect.cpp  intersect.h  line.cpp  line.h  localchange.cpp  localchange.h  localglobalstep.cpp  localglobalstep.h  localtranstep.cpp  localtranstep.h  loops.cpp  loops.h  merge.cpp  merge.h  optimal_polygon  output.txt  pathlist.cpp  pathlist.h  subdivision.cpp  subdivision.h  triangle.cpp
(+73 files in other folders)
